objects/Salesperson_Account__c.object
<CustomObject>
    <description>Junction object for Account and Slaesperson</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salesperson Accounts</relationshipLabel>
        <relationshipName>Salesperson_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Salesperson Accounts</relationshipLabel>
        <relationshipName>Salesperson_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account__r.CUST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <formula>Account__r.Org_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>Sales_Person__c</referenceTo>
        <relationshipLabel>Salesperson Accounts</relationshipLabel>
        <relationshipName>Salesperson_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <formula>Sales_Person__r.Territory_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Code</label>
        <type>Text</type>
    </fields>
    <label>Salesperson Account</label>
    <nameField>
        <displayFormat>SPA{00000}</displayFormat>
        <label>Salesperson Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesperson Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>